samples/_failures_safe/1761700931_b2ab2c_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_017afa7c.c:156:1: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ at end of input
  156 | int main
      | ^~~
